--- a/TIL/index.html
+++ b/TIL/index.html
@@ -6,40 +6,75 @@
   </head>
 
   <body>
+    <!-- 순차적으로 사용 -->
     <h1>Heading h1</h1>
     <h2>Heading h2</h2>
+    <h3>Heading h3</h3>
+    <h4>Heading h4</h4> 
+    <h5>Heading h4</h5> 
+    <h6>Heading h4</h6> 
+
+    <br>
+
     <p>
       본문 사용은 다른 태그를 사용
       첫 번째 문단
       첫 번째 문단
       첫 번째 문단
     </p>
-    <br>
     <p>
       두 번째 문단
       두 번째 문단
       두 번째 문단
       두 번째 문단
     </p>
-    <h3>Heading h3</h3>
-    <h4>Heading h4</h4> <!-- 순차적으로 사용 -->
+
     <br>
-    <a href="#" target="_blank">
-      <pre>
+
+    <pre>iiiii</pre>
+    <p>iiiii</p> <!-- 형태가 다름 -->
+    <pre>
       두다다다다다다다
       두다다다다다다다
       　(∩`・ω・)
       ＿/_ミつ/￣￣￣/
       　　＼/＿＿＿/
-      </pre>
-    </a>
-    <pre>iiiii</pre>
-    <p>iiiii</p> <!-- 형태가 다름 -->
+    </pre>
+
+    <br>
+
+    <a href="#" target="_blank"></a>
+
+    <br>
 
     <p>너는 <em>밥을</em> 먹어야해!</p>
     <p>그 책은 <i>셰익스피어</i>의 책이다.</p>
 
+    <br>
+
     <p>다섯 개의 스페이싱(&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;)</p>
     <pre>문단을 나타내는 태그는 &lt;p&gt;&lt;/p&gt; 태그 입니다.</pre> <!-- 문단으로 자동 인식 -->
+
+    <br>
+
+    <span style="background-color: brown;">Hello World I'm span</span>
+    <div style="background-color: blueviolet;">Hello World I'm div</div> <!-- 블록 레벨 요소 -->
+    <span style="background-color: brown;">Hello World I'm span</span>
+
+    <br>
+    <!-- 구획을 나타내는 요소 -->
+    <header>
+      <h1>제목</h1>
+    </header>
+    <main>
+      <div>
+        <section>
+          <article>요소 1</article>
+          <article>요소 2</article>
+          <article>요소 3</article>
+        </section>
+      </div>
+    </main>
+    <footer><span>푸터</span></footer>
   </body>
 </html>
