Update 4. HTML의 요소(4).md

--- a/index.html
+++ b/index.html
@@ -76,5 +76,72 @@
       </div>
     </main>
     <footer><span>푸터</span></footer>
+
+    <br>
+    <!-- 목록 요소 -->
+    <ol>
+      <li>Milk</li>
+      <li>Cheese</li>
+        <ul>
+            <li>blue Cheese</li>
+            <li>Feta</li>
+          </ul>
+        <li>choco</li>
+    </ol>
+
+    <br>
+    <!-- 정의 목록 요소 -->
+    <dl>
+      <dt>IE</dt>
+      <dt>Chrome</dt>
+      <dt>Firefox</dt>
+      <dd>
+        모두 웹 브라우저이다.
+      </dd>
+
+      <dt>Chrome</dt>
+      <dd>웹 브라우저이다.</dd>
+      <dd>점유율이 제일 높다.</dd>
+    </dl>
+
+    <br>
+    <!-- table 요소 -->
+    <table>
+      <caption>장보기 목록</caption>
+      <thead>
+        <tr>
+          <th>품목</th>
+          <th>지출</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <th colspan="2">식재료</th>
+        </tr>
+        <tr>
+          <th>대파</th>
+          <td>3,000</td>
+        </tr>
+        <tr> 
+          <th>양파</td>
+          <td>3,000</td>
+        </tr>
+      </tbody>
+      <tbody>
+        <th colspan="2">기타</th>
+        <tr>
+          <th>봉다리</th>
+          <td>3,000</td>
+        </tr>
+        <tr>  
+          <th>간식</th>
+          <td>3,000</td>
+        </tr>
+      </tbody>
+      <tfoot>
+        <th>totals</th>
+        <td>12,000</td>
+      </tfoot>
+    </table>
   </body>
 </html>
