Update 5. HTML의 요소(5)

--- a/index.html
+++ b/index.html
@@ -160,5 +160,11 @@
       <source src="/source/videoFile.mp4">
       Sorry, your browser doesn't support embedded videos. <!-- 브라우저 미지원시 뜸 -->
     </video>
+
+    <!-- form 요소 -->
+    <form action="" method="POST"> <!-- 주소 지정안하면 현재 페이지로 감 -->
+      <input type="text" name="test">
+      <button type="submit">제출</button>
+    </form>
   </body>
 </html>
