Update 6. HTML의 속성.md

--- a/index.html
+++ b/index.html
@@ -260,6 +260,19 @@
       <textarea name="comment" id="comment" cols="30" rows="10"></textarea>
     </label>
   </section>
+
+  <section>
+    <div id="div1" class="divs div1" title="인삿말">1</div>
+    <div id="div2" class="divs" style="background-color: brown;">2</div>
+    <div id="div3" class="divs" style="color: blue;">3</div>
+    <div id="div4" class="divs">4</div>
+    <div id="div5" class="divs">5</div>
+  </section>
+
+  <p lang="ko">
+    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio a corrupti, dicta aliquid quidem placeat quaerat laboriosam. Facilis obcaecati similique velit iste assumenda dolorem maxime consectetur fuga eos, provident tempora!
+  </p>
+
 </body>
 </html>
 
