--- a/TEST/HTMLTest2.html
+++ b/TEST/HTMLTest2.html
@@ -30,11 +30,29 @@
       font-weight: bold;
     }
     .menu {
-      display: flex;
-      flex-direction: row;
+      position: absolute;
+      right: 50px;
     }
     .menu > ul {
+      display: flex;
+      margin: 0;
+      padding: 0;
       list-style: none;
+    }
+    .menu > ul > li {margin-left: 10px;}
+
+    .icon {
+      display: flex;
+      flex-wrap: wrap;
+      width: 400px;
+      height: 400px;
+      background-color: rgb(255, 250, 244);
+    }
+    .icon > img {
+      width: 100px;
+      margin: 13px;
+      border: 1px solid black;
+      border-radius: 10px;
     }
   </style>
 </head>
@@ -58,6 +76,19 @@
         </ul>
       </article>
     </nav>
+  </section>
+
+  <!-- TEST 3 -->
+  <section>
+    <div class="icon">
+      <img src="https://play-lh.googleusercontent.com/ccWDU4A7fX1R24v-vvT480ySh26AYp97g1VrIB_FIdjRcuQB2JP2WdY7h_wVVAeSpg=s180-rw" alt="">
+      <img src="https://play-lh.googleusercontent.com/h9jWMwqb-h9hjP4THqrJ50eIwPekjv7QPmTpA85gFQ10PjV02CoGAcYLLptqd19Sa1iJ=s180-rw" alt="">
+      <img src="https://play-lh.googleusercontent.com/Ob9Ys8yKMeyKzZvl3cB9JNSTui1lJwjSKD60IVYnlvU2DsahysGENJE-txiRIW9_72Vd=s180-rw" alt="">
+      <img src="https://play-lh.googleusercontent.com/PCpXdqvUWfCW1mXhH1Y_98yBpgsWxuTSTofy3NGMo9yBTATDyzVkqU580bfSln50bFU=s180-rw" alt="">
+      <img src="https://play-lh.googleusercontent.com/lMoItBgdPPVDJsNOVtP26EKHePkwBg-PkuY9NOrc-fumRtTFP4XhpUNk_22syN4Datc=s180-rw" alt="">
+      <img src="https://play-lh.googleusercontent.com/eN0IexSzxpUDMfFtm-OyM-nNs44Y74Q3k51bxAMhTvrTnuA4OGnTi_fodN4cl-XxDQc=s180-rw" alt="">
+      <img src="https://play-lh.googleusercontent.com/z5nin1RdQ4UZhv6fa1FNG7VE33imGqPgC4kKZIUjgf_up7E-Pj3AaojlMPwNNXaeGA=s180-rw" alt="">
+    </div>
   </section>
 </body>
 </html>
