--- a/zerobaseClone.html
+++ b/zerobaseClone.html
@@ -11,46 +11,54 @@
   <header>
     <div class="header__wrap">
       <div class="logo">Zero-Base</div>
-      <nav class="nav-menu">
-        <div class="nav-menu__block">ABOUT US
-          <ul class="nav-menu__list">
-            <li><a href="#">submenu</a></li>
-            <li><a href="#">submenu</a></li>
-          </ul>
-        </div>
-        <div class="nav-menu__block">이벤트
-          <ul class="nav-menu__list">
-            <li><a href="#">submenu</a></li>
-            <li><a href="#">submenu</a></li>
-            <li><a href="#">submenu</a></li>
-          </ul>
-        </div>
-        <div class="nav-menu__block">온라인 강의
-          <ul class="nav-menu__list">
-            <li><a href="#">submenu</a></li>
-            <li><a href="#">submenu</a></li>
-            <li><a href="#">submenu</a></li>
-          </ul>
-        </div>
-        <div class="nav-menu__block">네카라쿠배
-          <ul class="nav-menu__list">
-            <li><a href="#">submenu</a></li>
-            <li><a href="#">submenu</a></li>
-            <li><a href="#">submenu</a></li>
-            <li><a href="#">submenu</a></li>
-            <li><a href="#">submenu</a></li>
-            <li><a href="#">submenu</a></li>
-            <li><a href="#">submenu</a></li>
-          </ul>
-        </div>
-        <div class="nav-menu__block">로그인
-        </div>
-        <div class="nav-menu__block">회원가입
-        </div>
+      <nav class="nav">
+        <div class="nav-menu">
+          <div class="nav-menu__block">
+            <label for="nav-menu-0" class="nav-menu__item">ABOUT US</label>
+            <ul class="nav-menu__list">
+              <li><a href="#">submenu</a></li>
+              <li><a href="#">submenu</a></li>
+            </ul>
+          </div>
+          <div class="nav-menu__block">
+            <label for="nav-menu-1" class="nav-menu__item">이벤트</label>
+            <ul class="nav-menu__list">
+              <li><a href="#">submenu</a></li>
+              <li><a href="#">submenu</a></li>
+            </ul>
+          </div>
+          <div class="nav-menu__block">
+            <label for="nav-menu-3" class="nav-menu__item">온라인 강의</label>
+            <ul class="nav-menu__list">
+              <li><a href="#">submenu</a></li>
+              <li><a href="#">submenu</a></li>
+            </ul>
+          </div>
+          <div class="nav-menu__block">
+            <label for="nav-menu-4" class="nav-menu__item">네카라쿠배</label>
+            <ul class="nav-menu__list">
+              <li><a href="#">submenu</a></li>
+              <li><a href="#">submenu</a></li>
+            </ul>  
+          </div>
+          <div class="nav-menu__block">
+            <a class="nav-menu__item">로그인</a>
+            <a class="nav-menu__item">회원가입</a>
+          </div>
+        </div>      
       </nav>
     </div>
-   
-  </header>
+  </header> 
+
+  <main class="main">
+    <!-- section1 : slider -->
+    <section class="content-slider">
+    </section>
+  </main>
+ 
+  
+  
+
   <footer></footer>
 </body>
 </html>
